[image-box] fixed image spacing on mobile

--- a/assets/scss/frontend/widgets/image-box.scss
+++ b/assets/scss/frontend/widgets/image-box.scss
@@ -73,6 +73,7 @@
 		.elementor-image-box-img {
 			margin-left: auto !important;
 			margin-right: auto !important;
+			margin-bottom: 15px;
 		}
 	}
 
